force-app/main/default/objects/Account/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <label>Account Balance</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>