force-app/main/default/objects/Account/fields/avorite_Country_Song__c.field-meta.xml
<CustomField>
    <fullName>avorite_Country_Song__c</fullName>
    <label>avorite Country Song</label>
    <length>50</length>
    <type>Text</type>
</CustomField>