force-app/main/default/objects/Account/fields/Concatenated_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Account_Name__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp; BillingCity &amp; &quot;, &quot; &amp; BillingState</formula>
    <label>Concatenated Account Name</label>
    <type>Text</type>
</CustomField>