force-app/main/default/objects/Account/fields/EDU_Advancement_Household__c.field-meta.xml
<CustomField>
    <fullName>EDU_Advancement_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Household Acount</description>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>