force-app/main/default/objects/Account/fields/EDU_Advancement_Preferences__c.field-meta.xml
<CustomField>
    <fullName>EDU_Advancement_Preferences__c</fullName>
    <label>Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Do Not Mail</fullName>
            </value>
            <value>
                <fullName>Do Not Solicit</fullName>
            </value>
            <value>
                <fullName>Email Opt Out</fullName>
            </value>
            <value>
                <fullName>No Direct Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>