force-app/main/default/objects/Account/fields/EDU_K12_Last_Job_Listing_Submitted__c.field-meta.xml
<CustomField>
    <fullName>EDU_K12_Last_Job_Listing_Submitted__c</fullName>
    <label>Last Job Listing Submitted</label>
    <type>DateTime</type>
</CustomField>