force-app/main/default/objects/Account/fields/EDU_K12_Student_Success_School__c.field-meta.xml
<CustomField>
    <fullName>EDU_K12_Student_Success_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Parent.Name</field>
            <operation>equals</operation>
            <value>Connected School District</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schools</relationshipLabel>
    <relationshipName>Schools</relationshipName>
    <type>Lookup</type>
</CustomField>