force-app/main/default/objects/Account/fields/Entity_Status__c.field-meta.xml
<CustomField>
    <fullName>Entity_Status__c</fullName>
    <label>Entity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Dissolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>