force-app/main/default/objects/Account/fields/Favorite_Country_Song__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Country_Song__c</fullName>
    <label>Favorite Country Song</label>
    <length>50</length>
    <type>Text</type>
</CustomField>