force-app/main/default/objects/Account/fields/Needs_Research__c.field-meta.xml
<CustomField>
    <fullName>Needs_Research__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Research</label>
    <type>Checkbox</type>
</CustomField>