force-app/main/default/objects/Account/fields/Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Stage__c</fullName>
    <label>Prospect Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identification</fullName>
            </value>
            <value>
                <fullName>Cultivation</fullName>
            </value>
            <value>
                <fullName>Solicitation</fullName>
            </value>
            <value>
                <fullName>Stewardship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>