force-app/main/default/objects/Account/fields/Registration_Hold__c.field-meta.xml
<CustomField>
    <fullName>Registration_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked student has a registration hold and unable to register until cleared.</inlineHelpText>
    <label>Registration Hold</label>
    <type>Checkbox</type>
</CustomField>