force-app/main/default/objects/Account/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <label>Student ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>