force-app/main/default/objects/Account/fields/X18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18-Digit ID</label>
    <type>Text</type>
</CustomField>