force-app/main/default/objects/Account/fields/XAcademicTerm__c.field-meta.xml
<CustomField>
    <fullName>XAcademicTerm__c</fullName>
    <label>XAcademicTerm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>