force-app/main/default/objects/Account/recordTypes/Corporate_Relations_HigherEd_Business.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Relations_HigherEd_Business</fullName>
    <active>true</active>
    <label>Corporate Relations - HigherEd - Business</label>
</RecordType>