force-app/main/default/objects/Account/recordTypes/EDU_Base_College.recordType-meta.xml
<RecordType>
    <fullName>EDU_Base_College</fullName>
    <active>true</active>
    <label>College</label>
</RecordType>