force-app/main/default/objects/Account/recordTypes/Exam.recordType-meta.xml
<RecordType>
    <fullName>Exam</fullName>
    <active>true</active>
    <label>Exam</label>
</RecordType>