force-app/main/default/objects/Account/recordTypes/Household.recordType-meta.xml
<RecordType>
    <fullName>Household</fullName>
    <active>true</active>
    <description>Business Account representing a family unit of individuals</description>
    <label>Household</label>
</RecordType>