force-app/main/default/objects/Account/recordTypes/Internal_Department.recordType-meta.xml
<RecordType>
    <fullName>Internal_Department</fullName>
    <active>true</active>
    <description>Department of Connected University</description>
    <label>Internal Department</label>
</RecordType>