force-app/main/default/objects/Account/listViews/Assigned_Prospects.listView-meta.xml
<ListView>
    <fullName>Assigned_Prospects</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Prospect_Stage__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>PC_ADDRESS2_STATE</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Alumni_Higher_Ed_Person_Account</value>
    </filters>
    <label>Assigned Prospects</label>
</ListView>