force-app/main/default/objects/Account/listViews/District_Schools.listView-meta.xml
<ListView>
    <fullName>District_Schools</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Connected School District</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Connected School District</value>
    </filters>
    <label>District Schools</label>
</ListView>