force-app/main/default/objects/Account/listViews/EDU_Admissions_Colleges.listView-meta.xml
<ListView>
    <fullName>EDU_Admissions_Colleges</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Post-Secondary</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Secondary_School</value>
    </filters>
    <label>Colleges</label>
</ListView>