force-app/main/default/objects/Account/listViews/EDU_Admissions_High_School_Seniors.listView-meta.xml
<ListView>
    <fullName>EDU_Admissions_High_School_Seniors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Verify_ID_High_School__pc</columns>
    <columns>Placement_Test_Taken__pc</columns>
    <columns>EDU_FinancialAid_ActiveFAFSA__pc</columns>
    <filterScope>Mine</filterScope>
    <label>High School Seniors</label>
</ListView>