force-app/main/default/objects/Account/listViews/Higher_Ed_Person_Accounts.listView-meta.xml
<ListView>
    <fullName>Higher_Ed_Person_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Student_Success_Higher_Ed_Student</value>
    </filters>
    <label>Higher Ed Person Accounts</label>
</ListView>