force-app/main/default/objects/Account/listViews/Higher_Ed_Student_Accounts.listView-meta.xml
<ListView>
    <fullName>Higher_Ed_Student_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012gL000005GrG1</value>
    </filters>
    <label>Higher Ed Student Accounts</label>
</ListView>