force-app/main/default/objects/Account/listViews/Needs_Research.listView-meta.xml
<ListView>
    <fullName>Needs_Research</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Prospect_Stage__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>PC_ADDRESS2_STATE</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Needs_Research__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Needs Research</label>
</ListView>