force-app/main/default/objects/Account/listViews/New_Student_Accounts.listView-meta.xml
<ListView>
    <fullName>New_Student_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/29/2026 12:00 AM</value>
    </filters>
    <label>New Student Accounts</label>
</ListView>